# git-meta

./: .gitignore  AGENTS.md  Cargo.toml  README.md  gh-import.md  notes.md  spec.md  split.md  tmp
.claude/: settings.local.json
.github/workflows/: ci.yaml
crates/git-meta-cli/: Cargo.toml
crates/git-meta-cli/src/: cli.rs  context.rs  main.rs  pager.rs  style.rs
crates/git-meta-lib/src/: error.rs  git_utils.rs  lib.rs  list_value.rs  materialize.rs  prune.rs  pull.rs  push.rs  serialize.rs  session.rs  session_handle.rs  sync.rs  tree_paths.rs  types.rs
crates/git-meta-lib/tests/: crud.rs  edge_cases.rs  exchange.rs  handle.rs  merge.rs  serialize.rs  session.rs  value_types.rs
crates/gmeta-bench/: Cargo.toml
crates/gmeta-bench/src/: db.rs  lib.rs  serialize.rs
crates/gmeta-cli/: Cargo.toml
crates/gmeta-cli/src/: cli.rs  context.rs  main.rs
crates/gmeta-core/: Cargo.toml
crates/gmeta-core/src/: git_utils.rs  lib.rs  materialize.rs  prune.rs  pull.rs  push.rs  serialize.rs  session.rs  sync.rs  (+2 more)
docs/: app.js  index.html  robots.txt  sitemap.xml  styles.css
docs/assets/: style.css
docs/exchange-format/: exchange.html  lists.html  materialization.html  principles.html  sets.html  strings.html  targets.html
docs/implementation/: cli.html  output.html  overview.html  pruning.html  standard-keys.html  storage.html  workflow.html
docs/schemes/: benchmark-results-100k.html  benchmark-results-10k.html  benchmark-results.html
docs/spec/: index.html  robots.txt  sitemap.xml
notes/: notes.md  scaling.md  scenarios.md
scripts/: backlog.rb  generate_docs.py  load-linux.rb  log.rb
spec/: README.md
spec/exchange-format/: materialization.md  targets.md
spec/implementation/: cli.md  overview.md  serialize-filters.md  standard-keys.md  storage.md  workflow.md
src/: cli.rs  db.rs  git_utils.rs  main.rs  types.rs
src/commands/: config.rs  get.rs  import.rs  inspect.rs  list.rs  local_prune.rs  log.rs  materialize.rs  mod.rs  promisor.rs  prune.rs  pull.rs  push.rs  remote.rs  rm.rs  serialize.rs  set.rs  show.rs  stats.rs  watch.rs
templates/: docs-page.html
tests/: integration.rs
(+114 files in other folders)
