[workspace]
members = ["crates/git-meta-lib", "crates/git-meta-cli"]
resolver = "2"

[workspace.package]
version = "0.1.10"
edition = "2021"
license = "MIT"
repository = "https://github.com/git-meta/git-meta"

[workspace.dependencies]
anyhow = "1"
gix = { version = "0.83.0", default-features = false, features = [
    "sha1", "revision", "merge", "tree-editor", "blob-diff",
] }
rusqlite = { version = ">=0.33,<0.40", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1 = "0.10"
thiserror = "2"
time = { version = "0.3", features = ["formatting", "parsing", "macros"] }
uuid = { version = "1", features = ["v4"] }

[workspace.lints.rust]
unsafe_code = "forbid"
missing_debug_implementations = "warn"
missing_docs = "warn"
private_interfaces = "warn"
private_bounds = "warn"
unreachable_pub = "warn"

[workspace.lints.clippy]
await_holding_lock = "warn"
cloned_instead_of_copied = "warn"
dbg_macro = "warn"
empty_enums = "warn"
enum_glob_use = "warn"
equatable_if_let = "warn"
exit = "warn"
expect_used = "deny"
filter_map_next = "warn"
fn_params_excessive_bools = "warn"
if_let_mutex = "warn"
implicit_clone = "warn"
imprecise_flops = "warn"
inefficient_to_string = "warn"
linkedlist = "warn"
lossy_float_literal = "warn"
macro_use_imports = "warn"
manual_let_else = "warn"
map_unwrap_or = "warn"
match_same_arms = "warn"
match_wildcard_for_single_variants = "warn"
mem_forget = "warn"
must_use_candidate = "warn"
needless_borrow = "warn"
needless_continue = "warn"
needless_pass_by_ref_mut = "warn"
needless_pass_by_value = "warn"
option_option = "warn"
redundant_clone = "warn"
redundant_closure_for_method_calls = "warn"
ref_option = "warn"
rest_pat_in_fully_bound_structs = "warn"
return_self_not_must_use = "warn"
semicolon_if_nothing_returned = "warn"
single_match_else = "warn"
suboptimal_flops = "warn"
todo = "warn"
trivially_copy_pass_by_ref = "warn"
uninlined_format_args = "warn"
unnested_or_patterns = "warn"
unused_self = "warn"
unwrap_used = "deny"
verbose_file_reads = "warn"
